--- a/translations/en.json
+++ b/translations/en.json
@@ -1,15 +1,19 @@
 {
+    "title": "Hisense TV",
     "config": {
-        "flow_title": "Hisense TV",
         "step": {
             "user": {
                 "data": {
+                    "name": "TV Name",
                     "mac": "MAC Address",
-                    "mqtt_in": "MQTT in prefix",
-                    "mqtt_out": "MQTT out prefix",
-                    "name": "Name"
-                },
-                "description": "TBD"
+                    "mqtt_in": "MQTT subscription prefix",
+                    "mqtt_out": "MQTT publish prefix"
+                }
+            },
+            "authentication": {
+                "data": {
+                    "pin": "PIN Code"
+                }
             }
         }
     }
