improve wake-on-lan
- support WOL destination IP address
- fix missing entity name

--- a/custom_components/hisense_tv/translations/en.json
+++ b/custom_components/hisense_tv/translations/en.json
@@ -5,7 +5,8 @@
             "user": {
                 "data": {
                     "name": "TV Name",
-                    "mac": "MAC Address",
+                    "mac": "WakeOnLAN MAC Address",
+                    "ip_address": "WakeOnLAN IP Address",
                     "mqtt_in": "MQTT subscription prefix",
                     "mqtt_out": "MQTT publish prefix"
                 }
